--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ header{
     background-size: cover;
     position:  relative;
     margin-top: 30px; 
-  
+  top: 0;
+  left: 0;
 
 }
+.onglets{}
 
 .Contact{
     min-height: 100vh;
@@ -500,11 +502,14 @@ section .actualite .imbox img{
   
   /* partie nav */
   
-  
+  nav{
+  }
   
 .nav1{
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    width: 100%;
 }
 .nav1 ul{
     display: flex;
@@ -833,4 +838,159 @@ section .actualite .imbox img{
     .l{
     padding-top: 30px;
     }
+    
+    
+    /* debut responsiv */
+    
+.toggle {
+    display: none;
+  }
+  
+    
+
+@media all and (max-width: 900px) {
+
+
+
+    .toggle {
+      display: block;
+      font-size: 2rem;
+      cursor: pointer;
+      position: relative;
+      z-index: 21;
+      color: #fff;
+     
+    }
+    
+    
+  .logo-box {
+    position: relative;
+    z-index: 20;
+    margin-top: 24px;
+    
+  } 
+     
+   
+  .ouvrir {
+    display: block;
+  }
+
+  .fermer {
+    display: none !important;
+  }
+
+  .open .ouvrir {
+    display: none;
+  }
+
+
+  .open .fermer {
+    display: block !important;
+  }
+
+  .onglets {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    flex-direction: column;
+    padding: 2rem;
+    justify-content: space-around;
+    transform: translateX(-100%);
+    transition: transform 1s;
+    z-index: 20;
+  }
+
+  .open .onglets {
+    transform: translateX(0);
+  } 
+  
+  
+  .onglets li a {
+    font-size: 2rem;
+  }
+  
+  
+  header{
+    min-height: 200vh;
+}
+  
+  .na4{
+      height: 80vh;
+      margin-left: 0px;
+      margin-right: 10px;
+      margin-top: 50px;
+  }
+  
+  
+  .na3{
+      margin-left: 0;
+      margin-right: 10px;
+  }
+   
+  
+.na2{
+    padding-top: 0px;
+    margin-left: 50px;
+} 
+   
+    
+}
+
+/* header responssive */
+
+
+@media all and (max-width: 300px) {
+    
+    header{
+        min-height: 250vh;
+        
+    }
+    
+  .na4{
+    height: 100vh;
+    margin-right: 0;
+   
+}
+.na3{
+    margin-left: 0p;
+}
+
+.na3 a{
+   
+   padding-left: 20px;
+}  
+
+
+
+
+.na4 input{
+  margin-top: 20px
+   
+}
+
+.na4 select{
+   padding: ;
+padding-bottom: 20px;
+}
+
+.na4 button{
+   padding: 
+  
+}
+
+.sea{
+
+
+
+}
+
+
+ 
+    
+}
+
+
     
