--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ section .actualite .imbox img{
 
 .na2{
     padding-top: 150px;
-    margin-left: 250px;
+    padding-left: 250px;
 }
 .na2 h2 {
     color: #fff;
@@ -601,18 +601,21 @@ section .actualite .imbox img{
    margin-right: 500px; */
    padding-bottom: 5px;
    margin-top: 50px;
-   margin-left: 102px;
+   padding-left: 102px;
 }
 
 .na4{
     background-color: #fff;
-    height: 15vh;
+    /* height: 15vh; */
     padding-top: 30px;
-    margin-left: 100px;
-    margin-right: 400px;
+    width: 900px;
     text-align: center;
+    /* padding-left: 400px; */
     border-radius: 10px;
+    margin-left: 100px;
+    /* margin-right: 100px; */
     /* padding: 40px 20px; */
+    
 }
 
 .na4 input{
@@ -848,6 +851,14 @@ section .actualite .imbox img{
         height: 600px;
     
     }
+    
+    .divv .fottt{
+        margin-left: -180px;
+    }
+    .divv{
+        padding-left: 100px;
+        padding-right: 100px;
+    }
     .j{
         margin-top: 5%;
     }
@@ -883,4 +894,229 @@ section .actualite .imbox img{
     }
     .j button:hover{
         background: aqua;
+    }
+    
+    
+    /* responsive */
+    
+    .toggle{
+        display: none;
+    }
+    @media all and (max-width: 1268px){
+        .div{
+            height: 900px;
+            flex-direction: column;
+        }
+        .divv{
+            height: 900px;
+            flex-direction:column-reverse;
+        }
+        .j{
+            /* padding-left: 150px; */
+            text-align: center;
+        }
+        .fottt{
+            text-align: center;
+        }
+        .div .fottt{
+            padding-left: 0;
+        }
+        .divv .fottt{
+            margin-left: 0;
+        }
+        
+    }
+    
+    
+    @media all and (max-width: 1065px) {
+
+
+
+        .toggle {
+          display: block;
+          font-size: 2rem;
+          cursor: pointer;
+          position: relative;
+          z-index: 21;
+          color: #fff;
+         
+        }
+        
+        
+      .logo-box {
+        position: relative;
+        z-index: 20;
+        margin-top: 24px;
+        
+      } 
+         
+       
+      .ouvrir {
+        display: block;
+      }
+    
+      .fermer {
+        display: none !important;
+      }
+    
+      .open .ouvrir {
+        display: none;
+      }
+    
+    
+      .open .fermer {
+        display: block !important;
+      }
+    
+      .onglets {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000;
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: space-around;
+        transform: translateX(-100%);
+        transition: transform 1s;
+        z-index: 20;
+      }
+    
+      .open .onglets {
+        transform: translateX(0);
+      } 
+      
+      
+      .onglets li a {
+        font-size: 2rem;
+      }
+      
+      
+      header{
+        min-height: 200vh;
+    }
+      
+      .na4{
+          height: 80vh;
+          padding-left: 0px;
+          padding-right: 10px;
+          margin-top: 50px; 
+          width: 100%;
+          margin-left: 0;
+      } 
+      
+      
+      .na3{
+          margin-left: 0;
+          margin-right: 10px;
+      }
+       
+      
+    .na2{
+        padding-top: 0px;
+    } 
+       
+        
+    }
+    
+    /* header responssive */
+    
+    
+    @media all and (max-width: 930px){
+        .actualite{
+            flex-direction: column-reverse;
+        }
+        .tem{
+            flex-direction: column;
+        }
+        
+    }
+    
+    
+    @media  (max-width: 300px) {
+    
+    .toggle{
+        margin-top: 10%;
+    }
+    .na2{
+        padding-left: 0;
+    }
+    .na2 h3{
+        text-align: center;
+        color: white;
+    }
+    .na2 h2{
+        text-align: center;
+    }
+    .actualite{
+        margin-left: 0;
+        /* text-align: center; */
+    }
+    section .actualite .imbox img {
+        width: 300px;
+        height: 300px;
+    }
+    .temoinss{
+        width: 300px !important;
+    }
+    section .h3{
+        margin-left: 0;
+    }
+    .container .slides{
+        margin-right: 10%;
+    }
+    .div{
+        height: 100%;
+    }
+    .divv{
+        height: 100%;
+    }
+    .divv{
+        margin-left: -80px;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .j{
+        text-align: start;
+    }
+    body{
+        /* background: #000; */
+        width: 100%;
+    }
+     .footer{
+         flex-direction: column;
+         
+     }
+     .na3 .aj {
+         margin-top: 30%;
+     }
+     .na3 a{
+         padding-left: 0;
+         text-align: center;
+     }
+     .job1{
+         
+     }
+     /* .na3 job2{
+         margin-left: 0;
+     } */
+     .na4{
+         display: none;
+     }
+     .act{
+         font-size: 1rem;
+     }
+     .recru{
+         font-size: 1rem;
+     }
+     .h3{
+        
+     }
+     header{
+         margin-top: 0;
+         
+     }
+    
     }
