--- a/style.css
+++ b/style.css
@@ -578,6 +578,9 @@ section .actualite .imbox img{
     padding-top: 150px;
     padding-left: 250px;
 }
+.na2 h5{
+    color: rgb(158, 151, 151);
+}
 .na2 h2 {
     color: #fff;
     font-size: 35px;
@@ -592,14 +595,16 @@ section .actualite .imbox img{
   
     text-decoration: none;
     margin-top: 50px; 
-    padding-left: 50px; 
+    /* padding-left: 50px;  */
 }
 .na3{
    /* display: flex; 
    justify-content: space-around;
    padding: 3% 25%;
    margin-right: 500px; */
+   display: flex;
    padding-bottom: 5px;
+   margin-bottom: 5px;
    margin-top: 50px;
    padding-left: 102px;
 }
@@ -653,7 +658,10 @@ section .actualite .imbox img{
     border-radius: 10px; 
     padding: 10px 20px;
     background-color: white; 
-    color: black;  
+    color: black; 
+}
+.aj{
+    /* margin-top: 1.5%; */
 }
 
 
@@ -902,7 +910,7 @@ section .actualite .imbox img{
     .toggle{
         display: none;
     }
-    @media all and (max-width: 1268px){
+    @media (max-width: 1268px){
         .div{
             height: 900px;
             flex-direction: column;
@@ -928,7 +936,7 @@ section .actualite .imbox img{
     }
     
     
-    @media all and (max-width: 1065px) {
+    @media  (max-width: 1065px) {
 
 
 
@@ -1023,7 +1031,7 @@ section .actualite .imbox img{
     /* header responssive */
     
     
-    @media all and (max-width: 930px){
+    @media (max-width: 930px){
         .actualite{
             flex-direction: column-reverse;
         }
