actulite margin lelt

--- a/style.css
+++ b/style.css
@@ -210,8 +210,8 @@ p{
 }
 
 .actualite{
- /* padding-left: 100px; */
- /* padding-right: 100px; */
+ padding-left: 100px;
+ padding-right: 100px;
  display: flex;
  /* justify-content: space-around; */
  
